--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -142,8 +142,14 @@
             img {
                 width: 30px;
                 height: 30px;
-                margin-right: 5px;
+                margin-right: 8px;
             }
+
+            .sqlite {
+                background: rgb(228, 224, 224);
+                border-radius: 5px;
+            }
+
             .css {
                 width: 38px;
                 height: 38px;
